--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- My Style -->
-    <link rel="stylesheet" href="/assets/library/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 
     <title>Ferry Agusta's Website</title>
 
@@ -62,11 +62,14 @@
         </div>
     </nav>
 
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="/assets/app.js"></script>
+    
 </body>
 
 </html>
