--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- My Style -->
     <link rel="stylesheet" href="style.css">
-    <title>Ferry Agusta</title>
+    <title>Sketsa ~ Ferry Agusta</title>
 </head>
 
 <body>
