--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Seputar IT
+                            My Category
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Aplikasi Komputer</a></li>
-                            <li><a class="dropdown-item" href="#">Aplikasi Web</a></li>
-                            <li><a class="dropdown-item" href="#">Aplikasi Lainnya</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Aplikasi Saya</a></li>
+                            <li><a class="dropdown-item" href="#">Desktop Application</a></li>
+                            <li><a class="dropdown-item" href="#">Web Application</a></li>
+                            <li><a class="dropdown-item" href="#">Console</a></li>
+                            <li><a class="dropdown-item" href="#">Others</a></li>                        
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Download</a>
+                    </li> 
 
                 </ul>
                 <form class="d-flex">
