--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    <div id="container-menu">Selamat datang para selancar dunia maya.. Definisi Sketsa adalah gambaran atau lukisan pendahuluan yang kasar, ringan, dan belum selesai yang biasanya digunakan sebagai rencana, dasar, atau pengingat dari gambar atau lukisan yang akan dibuat. Dalam hal ini halaman website ini dibuat dengan maksud dan tujuan yang serupa. Setidaknya dapat menampung gagasan atau ide apapun yang terfikir oleh pemilik website dan tidak dimaksudkan sebagai hasil karya akhir. Akhir kata, Saya mengucapkan terima kasih bagi para peselancar dunia maya yang sudah berkenan berkunjung ke halaman Website ini.</div>
+    <div id="container-menu"><b>Selamat datang</b> para peselancar dunia maya... Definisi Sketsa adalah gambaran atau lukisan pendahuluan yang kasar, ringan, dan belum selesai yang biasanya digunakan sebagai rencana, dasar, atau pengingat dari gambar atau lukisan yang akan dibuat. Dalam hal ini halaman website ini dibuat dengan maksud dan tujuan yang serupa. Setidaknya dapat menampung gagasan atau ide apapun yang terfikir oleh pemilik website dan tidak dimaksudkan sebagai hasil karya akhir. Akhir kata, Saya mengucapkan terima kasih bagi para peselancar dunia maya yang sudah berkenan berkunjung ke halaman Website ini.</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
