--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">SKETSA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,25 +25,27 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">FERRY AGUSTA</a>
-                    </li>                 
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            My Category
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Kategori
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Desktop Application</a></li>
                             <li><a class="dropdown-item" href="#">Web Application</a></li>
                             <li><a class="dropdown-item" href="#">Console</a></li>
-                            <li><a class="dropdown-item" href="#">Others</a></li>                        
+                            <li><a class="dropdown-item" href="#">Others</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">Download</a>
-                    </li> 
-
+                    </li>
                 </ul>
-                <form class="d-flex">
+                <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
@@ -51,7 +53,13 @@
         </div>
     </nav>
 
-    <div id="container-menu"><b>Selamat datang</b> para peselancar dunia maya... Definisi Sketsa adalah gambaran atau lukisan pendahuluan yang kasar, ringan, dan belum selesai yang biasanya digunakan sebagai rencana, dasar, atau pengingat dari gambar atau lukisan yang akan dibuat. Dalam hal ini halaman website ini dibuat dengan maksud dan tujuan yang serupa. Setidaknya dapat menampung gagasan atau ide apapun yang terfikir oleh pemilik website dan tidak dimaksudkan sebagai hasil karya akhir. Akhir kata, Saya mengucapkan terima kasih bagi para peselancar dunia maya yang sudah berkenan berkunjung ke halaman Website ini.</div>
+
+    <div id="container-menu"><b>Selamat datang</b> para peselancar dunia maya... Definisi Sketsa adalah gambaran atau
+        lukisan pendahuluan yang kasar, ringan, dan belum selesai yang biasanya digunakan sebagai rencana, dasar, atau
+        pengingat dari gambar atau lukisan yang akan dibuat. Dalam hal ini halaman website ini dibuat dengan maksud dan
+        tujuan yang serupa. Setidaknya dapat menampung gagasan atau ide apapun yang terfikir oleh pemilik website dan
+        tidak dimaksudkan sebagai hasil karya akhir. Akhir kata, Saya mengucapkan terima kasih bagi para peselancar
+        dunia maya yang sudah berkenan berkunjung ke halaman Website ini.</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
