--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">FERRY AGUSTA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
+                    </li>                   
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -38,6 +35,7 @@
                             <li><a class="dropdown-item" href="#">Desktop Application</a></li>
                             <li><a class="dropdown-item" href="#">Web Application</a></li>
                             <li><a class="dropdown-item" href="#">Console</a></li>
+                            <li><a class="dropdown-item" href="#">DBMS</a></li>
                             <li><a class="dropdown-item" href="#">Others</a></li>
                         </ul>
                     </li>
