--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h1>www.handayani-store.my.id</h1>
       </div>
       <ul class="menu-list">
-        <li><a href="">Home</a></li>
-        <li><a href="">Gallery</a></li>
+        <li><a href="">Beranda</a></li>
+        <li><a href="">Galeri</a></li>
         <li><a href="">Shorts</a></li>
-        <li><a href="">About Me</a></li>
+        <li><a href="">Kontak</a></li>
       </ul>
     </nav>
 
@@ -31,11 +31,11 @@
         <div class="p sub-heading">www.handayani-store.my.id</div>
       </div>
       <div class="features feature-1">
-        <h4 class="price">IDR 15K</h4>
+        <h4 class="banner">IDR 15K</h4>
         <p class="item">Potongan Belanja</p>
       </div>
       <div class="features feature-2">
-        <h4 class="price">20% OFF</h4>
+        <h4 class="banner">20% OFF</h4>
         <p class="item">Diskon</p>
       </div>
     </header>
@@ -141,98 +141,98 @@
         <a href="">
           <img src="img/2.webp" alt="">
           <h4>Gamis melayu</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/3.webp" alt="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/4.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/5.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/6.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/7.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/8.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/9.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/10.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/11.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/12.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/13.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/14.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/15.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good link">
@@ -249,28 +249,28 @@
         <iframe height="500" src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="short">
         <iframe height="500" src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class=" short">
         <iframe height="500" src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class=" short">
         <iframe height="500" src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150K</p>
+          <p>IDR 150.000</p>
         </a>
       </div>
       <div class="good link">
