--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav class="menu">
       <div class="logo">
         <h1>www.handayani-store.my.id</h1>
+        <!-- <h1>Handayani Store</h1> -->
       </div>
       <ul class="menu-list">
         <li><a href="">Beranda</a></li>
@@ -238,7 +239,7 @@
       <div class="good link">
         <a href="galeri.html">
           <img src="img/image-gallery.png" alt="">
-          <h4>Lihat Galleri</h4>
+          <h4>Lihat Galeri</h4>
         </a>
       </div>
     </section>
@@ -246,28 +247,28 @@
     <div class="title-section">Shorts</div>
     <section class="shorts">
       <div class="short">
-        <iframe height="500" src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
           <p>IDR 150.000</p>
         </a>
       </div>
       <div class="short">
-        <iframe height="500" src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
           <p>IDR 150.000</p>
         </a>
       </div>
       <div class=" short">
-        <iframe height="500" src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
           <p>IDR 150.000</p>
         </a>
       </div>
       <div class=" short">
-        <iframe height="500" src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
           <p>IDR 150.000</p>
