--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Handayani Store - Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+
 
 </head>
 
@@ -32,7 +36,7 @@
         <div class="p sub-heading">www.handayani-store.my.id</div>
       </div>
       <div class="features feature-1">
-        <h4 class="banner">IDR 15K</h4>
+        <h4 class="banner">Rp 15K</h4>
         <p class="item">Potongan Belanja</p>
       </div>
       <div class="features feature-2">
@@ -134,106 +138,106 @@
       <div class="good">
         <a href="detail.html">
           <img src="img/1.webp" alt="">
-          <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <h4>ADVAN Workplus</h4>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/2.webp" alt="">
           <h4>Gamis melayu</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/3.webp" alt="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/4.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/5.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/6.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/7.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/8.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/9.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/10.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/11.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/12.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/13.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/14.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good">
         <a href="">
           <img src="img/15.webp" alt="">
           <h4>Gamis mesir</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good link">
@@ -250,28 +254,28 @@
         <iframe src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="short">
         <iframe src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class=" short">
         <iframe src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class=" short">
         <iframe src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
         <a href="">
           <h4>Gamis bekasi</h4>
-          <p>IDR 150.000</p>
+          <p>Rp 150.000</p>
         </a>
       </div>
       <div class="good link">
@@ -281,7 +285,23 @@
         </a>
       </div>
     </section>
+
+    <nav class="desktop">
+      <div class="icon left-1">Galeri</div>
+      <div class="icon left-2">Short</div>
+      <div class="icon mid">Home</div>
+      <div class="icon right-1">WhatsApp</div>
+      <div class="icon right-2">Cari</div>
+    </nav>
+
+    <!--  -->
+
+
   </div>
+
+
+
+
 
   <script src="script.js"></script>
 </body>
