--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
     </section>
 
     <nav class="desktop">
-      <div class="icon left-1">Galeri</div>
-      <div class="icon left-2">Short</div>
-      <div class="icon mid">Home</div>
-      <div class="icon right-1">WhatsApp</div>
-      <div class="icon right-2">Cari</div>
+      <div class="icon"><img src="img/youtube.png" alt=""></div>
+      <div class="icon"><img src="img/youtube.png" alt=""></div>
+      <div class="icon"><img src="img/youtube.png" alt=""></div>
+      <div class="icon"><img src="img/youtube.png" alt=""></div>
+      <div class="icon"><img src="img/youtube.png" alt=""></div>
     </nav>
 
     <!--  -->
