--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
     </section>
 
     <nav class="desktop">
-      <div class="icon"><img src="img/youtube.png" alt=""></div>
-      <div class="icon"><img src="img/youtube.png" alt=""></div>
-      <div class="icon"><img src="img/youtube.png" alt=""></div>
-      <div class="icon"><img src="img/youtube.png" alt=""></div>
-      <div class="icon"><img src="img/youtube.png" alt=""></div>
+      <div class="icon">Beranda</div>
+      <div class="icon">Galeri</div>
+      <div class="icon">Shorts</div>
+      <div class="icon">Cari</div>
+      <div class="icon">WhatsApp</div>
     </nav>
 
     <!--  -->
