--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Handayani Store - Home</title>
   <link
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="style.css">
 
 
@@ -19,20 +20,20 @@
   <div class="container">
     <nav class="menu">
       <div class="logo">
-        <h1>www.handayani-store.my.id</h1>
-        <!-- <h1>Handayani Store</h1> -->
+        <!-- <h1>www.handayani-store.my.id</h1> -->
+        <h1><span class="h">Handayani</span><span class="s"> Store</span></h1>
       </div>
-      <ul class="menu-list">
+      <!-- <ul class="menu-list">
         <li><a href="">Beranda</a></li>
         <li><a href="">Galeri</a></li>
         <li><a href="">Shorts</a></li>
         <li><a href="">Kontak</a></li>
-      </ul>
+      </ul> -->
     </nav>
 
     <header class="header">
       <div class="hero">
-        <h2 class="heading">Handayani Store</h2>
+        <h2 class="heading"><span class="h">Handayani</span><span class="s"> Store</h2>
         <div class="p sub-heading">www.handayani-store.my.id</div>
       </div>
       <div class="features feature-1">
@@ -287,20 +288,13 @@
     </section>
 
     <nav class="desktop">
-      <div class="icon">Beranda</div>
-      <div class="icon">Galeri</div>
-      <div class="icon">Shorts</div>
-      <div class="icon">Cari</div>
-      <div class="icon">WhatsApp</div>
+      <div class="icon"><i data-feather="home">Home</i></div>
+      <div class="icon"><i data-feather="image">Galeri</i></div>
+      <div class="icon"><i data-feather="youtube">Shorts</i></div>
+      <div class="icon"><i data-feather="search">Search</i></div>
+      <div class="icon"><i data-feather="message-circle">WhatsApp</i></div>
     </nav>
-
-    <!--  -->
-
-
   </div>
-
-
-
 
 
   <script src="script.js"></script>
