--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
     </section>
 
     <nav class="desktop">
-      <div class="icon"><i data-feather="home">Home</i></div>
-      <div class="icon"><i data-feather="image">Galeri</i></div>
-      <div class="icon"><i data-feather="youtube">Shorts</i></div>
-      <div class="icon"><i data-feather="search">Search</i></div>
-      <div class="icon"><i data-feather="message-circle">WhatsApp</i></div>
+      <div class="icon"><i class="icon-size" data-feather="home"></i></div>
+      <div class="icon"><i class="icon-size" data-feather="image"></i></div>
+      <div class="icon"><i class="icon-size" data-feather="youtube"></i></div>
+      <div class="icon"><i class="icon-size" data-feather="search"></i></div>
+      <div class="icon"><i class="icon-size" data-feather="message-circle"></i></div>
     </nav>
   </div>
 
