--- a/index.html
+++ b/index.html
@@ -288,11 +288,21 @@
     </section>
 
     <nav class="desktop">
-      <div class="icon"><i class="icon-size" data-feather="home"></i></div>
-      <div class="icon"><i class="icon-size" data-feather="image"></i></div>
-      <div class="icon"><i class="icon-size" data-feather="youtube"></i></div>
-      <div class="icon"><i class="icon-size" data-feather="search"></i></div>
-      <div class="icon"><i class="icon-size" data-feather="message-circle"></i></div>
+      <div class="icon"><i class="icon-size" data-feather="grid"></i>
+        <p>Kategori</p>
+      </div>
+      <div class="icon"><i class="icon-size" data-feather="image"></i>
+        <p>Galeri</p>
+      </div>
+      <div class="icon"><i class="icon-size" data-feather="youtube"></i>
+        <p>Shorts</p>
+      </div>
+      <div class="icon"><i class="icon-size" data-feather="search"></i>
+        <p>Cari</p>
+      </div>
+      <div class="icon"><i class="icon-size" data-feather="message-circle"></i>
+        <p>WhatsApp</p>
+      </div>
     </nav>
   </div>
 
