--- a/index.html
+++ b/index.html
@@ -20,15 +20,26 @@
   <div class="container">
     <nav class="menu">
       <div class="logo">
-        <!-- <h1>www.handayani-store.my.id</h1> -->
         <h1><span class="h">Handayani</span><span class="s"> Store</span></h1>
       </div>
-      <!-- <ul class="menu-list">
-        <li><a href="">Beranda</a></li>
-        <li><a href="">Galeri</a></li>
-        <li><a href="">Shorts</a></li>
-        <li><a href="">Kontak</a></li>
-      </ul> -->
+      <div class="menu-list">
+        <div class="icon"><i class="icon-size-32" data-feather="grid"></i>
+          <p>Kategori</p>
+        </div>
+        <div class="icon"><i class="icon-size-32" data-feather="image"></i>
+          <p>Galeri</p>
+        </div>
+        <div class="icon"><i class="icon-size-32" data-feather="youtube"></i>
+          <p>Short</p>
+        </div>
+        <div class="icon"><i class="icon-size-32" data-feather="search"></i>
+          <p>Cari</p>
+        </div>
+        <div class="icon"><i class="icon-size-32" data-feather="message-circle"></i>
+          <p>WhatsApp</p>
+        </div>
+
+      </div>
     </nav>
 
     <header class="header">
@@ -243,7 +254,8 @@
       </div>
       <div class="good link">
         <a href="galeri.html">
-          <img src="img/image-gallery.png" alt="">
+          <div class="icon"><i class="icon-size-48" data-feather="image"></i>
+          </div>
           <h4>Lihat Galeri</h4>
         </a>
       </div>
@@ -281,26 +293,27 @@
       </div>
       <div class="good link">
         <a href="video.html">
-          <img src="img/youtube.png" alt="">
+          <div class="icon"><i class="icon-size-48" data-feather="youtube"></i>
+          </div>
           <h4>Lihat Shorts</h4>
         </a>
       </div>
     </section>
 
     <nav class="desktop">
-      <div class="icon"><i class="icon-size" data-feather="grid"></i>
+      <div class="icon"><i class="icon-size-30" data-feather="grid"></i>
         <p>Kategori</p>
       </div>
-      <div class="icon"><i class="icon-size" data-feather="image"></i>
+      <div class="icon"><i class="icon-size-30" data-feather="image"></i>
         <p>Galeri</p>
       </div>
-      <div class="icon"><i class="icon-size" data-feather="youtube"></i>
+      <div class="icon"><i class="icon-size-30" data-feather="youtube"></i>
         <p>Shorts</p>
       </div>
-      <div class="icon"><i class="icon-size" data-feather="search"></i>
+      <div class="icon"><i class="icon-size-30" data-feather="search"></i>
         <p>Cari</p>
       </div>
-      <div class="icon"><i class="icon-size" data-feather="message-circle"></i>
+      <div class="icon"><i class="icon-size-30" data-feather="message-circle"></i>
         <p>WhatsApp</p>
       </div>
     </nav>
