--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/component.css">
+  <link rel="stylesheet" href="detail.css">
 
 </head>
 
@@ -108,7 +109,7 @@
   <dialog data-modal-cari-top class="modal">
     <form>
       <input type="text" placeholder="cari..."><br>
-      <div type="submit" class="icon"><i class="icon-size-32 close-modal-cari-down" data-feather="search"></i>
+      <div type="submit" class="icon"><i class="size-32 close-modal-cari-down" data-feather="search"></i>
       </div>
     </form>
   </dialog>
@@ -205,10 +206,85 @@
   <dialog data-modal-cari-down class="modal">
     <form>
       <input type="text" placeholder="cari..."><br>
-      <div type="submit" class="icon"><i class="icon-size-32 close-modal-cari-down" data-feather="search"></i>
+      <div type="submit" class="icon"><i class="size-32 close-modal-cari-down" data-feather="search"></i>
       </div>
     </form>
   </dialog>
+
+  <dialog data-modal class="modal">
+    <div class="card-wrapper">
+      <div class="card">
+        <!-- card left -->
+        <div class="product-imgs">
+          <div class="img-display">
+            <div class="img-showcase">
+              <img src="shoes_images/shoe_1.jpg" alt="shoe image">
+              <img src="shoes_images/shoe_2.jpg" alt="shoe image">
+              <img src="shoes_images/shoe_3.jpg" alt="shoe image">
+              <img src="shoes_images/shoe_4.jpg" alt="shoe image">
+            </div>
+          </div>
+          <div class="img-select">
+            <div class="img-item">
+              <a href="#" data-id="1">
+                <img src="shoes_images/shoe_1.jpg" alt="shoe image">
+              </a>
+            </div>
+            <div class="img-item">
+              <a href="#" data-id="2">
+                <img src="shoes_images/shoe_2.jpg" alt="shoe image">
+              </a>
+            </div>
+            <div class="img-item">
+              <a href="#" data-id="3">
+                <img src="shoes_images/shoe_3.jpg" alt="shoe image">
+              </a>
+            </div>
+            <div class="img-item">
+              <a href="#" data-id="4">
+                <img src="shoes_images/shoe_4.jpg" alt="shoe image">
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- card right -->
+        <div class="product-content">
+          <h2 class="product-title">nike shoes</h2>
+          <a href="#" class="product-link">visit nike store</a>
+   
+          <div class="product-price">
+            <p class="last-price">Old Price: <span>$257.00</span></p>
+            <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
+          </div>
+
+          <div class="product-detail">
+            <h2>about this item: </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat
+              sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius. Dignissimos,
+              labore suscipit. Unde.</p>
+            <ul>
+              <li>Color: <span>Black</span></li>
+              <li>Available: <span>in stock</span></li>
+              <li>Category: <span>Shoes</span></li>
+              <li>Shipping Area: <span>All over the world</span></li>
+              <li>Shipping Fee: <span>Free</span></li>
+            </ul>
+          </div>
+
+          <div class="purchase-info">
+            <input type="number" min="0" value="1">
+            <button type="button" class="btn">
+              Add to Cart <i class="fas fa-shopping-cart"></i>
+            </button>
+            <button type="button" class="btn">Compare</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </dialog>
+
+
 
   <div class="container">
     <nav class="menu fixed-top">
@@ -234,23 +310,22 @@
       </div>
     </nav>
 
-
     <header class="header">
       <div class="hero">
         <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
         <div class="p sub-heading font-ubuntu-sans">www.handayani-store.my.id</div>
       </div>
       <div class="features feature-1">
-        <h4 class="banner">Rp 15K</h4>
+        <h4 class="banner">IDR 15K</h4>
         <p class="item">Potongan Belanja</p>
       </div>
       <div class="features feature-2">
-        <h4 class="banner">20% OFF</h4>
+        <h4 class="banner">10% OFF</h4>
         <p class="item">Diskon</p>
       </div>
     </header>
 
-    <div class="title-section">Brands</div>
+    <div class="title-section"># Brands</div>
     <section class="brands">
       <div class="brand">
         <a href="">
@@ -338,14 +413,14 @@
       </div>
     </section>
 
-    <div class="title-section">Rekomendasi</div>
+    <div class="title-section"># Rekomendasi</div>
     <section class="goods">
-      <div class="good">
-        <a href="detail.html">
-          <img src="img/1.webp" alt="">
-          <h4>ADVAN Workplus</h4>
-          <p>Rp 150.000</p>
-        </a>
+      <div class="good" open-modal>
+        <!-- <a href=""> -->
+        <img src="img/1.webp" alt="">
+        <h4>ADVAN Workplus</h4>
+        <p>Rp 150.000</p>
+        <!-- </a> -->
       </div>
       <div class="good">
         <a href="">
@@ -445,16 +520,16 @@
           <p>Rp 150.000</p>
         </a>
       </div>
-      <div class="good link">
-        <a href="galeri.html">
-          <div class="icon"><i class="icon-size-48" data-feather="image"></i>
+      <div class="link">
+        <a href="">
+          <div class="icon"><i class="size-48" data-feather="image"></i>
           </div>
           <h4>Lihat Galeri</h4>
         </a>
       </div>
     </section>
 
-    <div class="title-section">Shorts</div>
+    <div class="title-section"># Shorts</div>
     <section class="shorts">
       <div class="short">
         <iframe src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
@@ -484,13 +559,6 @@
           <p>Rp 150.000</p>
         </a>
       </div>
-      <div class="good link">
-        <a href="video.html">
-          <div class="icon"><i class="icon-size-48" data-feather="youtube"></i>
-          </div>
-          <h4>Lihat Shorts</h4>
-        </a>
-      </div>
     </section>
 
     <nav class="desktop fixed-down">
@@ -512,7 +580,6 @@
         </div>
       </div>
     </nav>
-
 
   </div>
 
